--- a/docs/translations/uk/uk.json
+++ b/docs/translations/uk/uk.json
@@ -102,7 +102,7 @@
   "genPsDelete": "Видалити шаблон",
   "genPsNew": "шаблон",
   "genPsEnabled": "Показати в списку шаблонів",
-  "genPsDefault": "Обраний за замовчуванням",
+  "genPsDefault": "Вибраний типово",
   "genPsDefaultLength": "Стандартна довжина",
   "genPsUpper": "Великі латинські літери",
   "genPsLower": "Малі латинські літери",
@@ -123,9 +123,9 @@
   "keyChangeMessageExpired": "Термін дії головного пароля цієї бази паролів завершився. Будь ласка, введіть новий пароль",
   "keyChangeRepeatPassword": "Пароль ще раз",
   "keyEnter": "Вхід",
-  "iconFavTitle": "Завантажити і використовувати іконку сайту",
+  "iconFavTitle": "Завантажити піктограму вебсайту",
   "iconSelCustom": "Обрати власну піктограму",
-  "listEmptyTitle": "Пусто",
+  "listEmptyTitle": "Порожньо",
   "listEmptyAdd": "додайте за допомогою кнопки {} вище",
   "listGroup": "Група",
   "listNoWebsite": "сайт відсутній",
@@ -205,14 +205,14 @@
   "detAttDownload": "Натисніть Shift і клацніть по вкладенню, щоб завантажити його, або",
   "detAttDelToRemove": "Delete для видалення",
   "detAttSave": "Зберегти як ...",
-  "detEmpty": "Ваші паролі будуть відображатися тут",
+  "detEmpty": "Тут будуть показані ваші паролі",
   "detGroupRestore": "Щоб відновити цю групу, перетягніть її зі смітника в будь-яку іншу групу.",
   "detHistoryClickPoint": "Натисніть на точку на часовій шкалі, щоб побачити стан",
   "detHistoryReturn": "повернутися до запису",
   "detHistoryRevert": "Повернути до стану",
   "detHistoryDel": "Видалити стан",
-  "detHistoryEmpty": "пусто",
-  "detHistoryModified": "модифіковано",
+  "detHistoryEmpty": "порожньо",
+  "detHistoryModified": "змінено",
   "detHistoryRec": "запис",
   "detHistoryRecs": "записи",
   "detHistoryVersion": "Версія",
@@ -228,7 +228,7 @@
   "detHistoryDiscardChangesAlertBody": "Незбережені зміни буде втрачено без можливості відновлення.",
   "detBackToList": "назад до списку",
   "detSetIconColor": "Змінити колір",
-  "detSetIcon": "Змінити іконку",
+  "detSetIcon": "Змінити піктограму",
   "detDropAttachments": "відпустіть файл для прикріплення",
   "detDelEntry": "Видалити",
   "detDelEntryPerm": "Видалити назавжди",
@@ -270,7 +270,7 @@
   "detAutoTypeWindow": "Вікно",
   "detAutoTypeInputWindow": "Заголовок вікна",
   "detSetupOtpAlert": "Сканувати QR код",
-  "detSetupOtpAlertBody": "Будь ласка, скопіюйте код QR, який відображається на сторінці авторизації.",
+  "detSetupOtpAlertBody": "Скопіюйте QR-код, який показано на сторінці авторизації.",
   "detSetupOtpAlertBody1": "1. перейти на сторінку авторизації",
   "detSetupOtpAlertBody2": "2. зробити скріншот QR коду {}",
   "detSetupOtpAlertBody3": "3. вставити тут {}",
@@ -290,8 +290,8 @@
   "detOtpClickToTouch": "Натисніть, щоб згенерувати",
   "detOtpGenerating": "Генерується...",
   "detOtpTouch": "Натисніть на ваш {}",
-  "detLockField": "Заблокувати поле, його зміст буде зкрито і він не буде відображатися в пошуку. Щоб побачити зміст поля треба буде клікнути по ньому.",
-  "detUnlockField": "Розблокувати поле, його зміст стане видимий і він буде відображатися в пошуку.",
+  "detLockField": "Заблокувати поле, щоб його вміст був недоступним для пошуку й перегляду. Щоб побачити вміст поля, необхідно натиснути на ньому.",
+  "detUnlockField": "Розблокувати поле, негайно зробивши його вміст доступним для пошуку й перегляду.",
   "detRevealField": "Показати",
   "detHideField": "Сховати",
   "detAutoTypeField": "Автовведення",
@@ -400,7 +400,7 @@
   "setGenFontSizeLarge": "Великий",
   "setGenFontSizeLargest": "Величезний",
   "setGenTitlebarStyle": "Стиль вікна (потрібне перезавантаження)",
-  "setGenTitlebarStyleDefault": "За замовчуванням",
+  "setGenTitlebarStyleDefault": "Типово",
   "setGenTitlebarStyleHidden": "Нестандартний заголовок",
   "setGenTitlebarStyleHiddenInset": "Нестандартний заголовок, перетягувати вікно",
   "setGenShowSubgroups": "Показати записи з усіх підгруп",
@@ -438,7 +438,7 @@
   "setGenStorage": "Сховище",
   "setGenDisableOfflineStorage": "Не зберігати кеш завантажених файлів у автономному сховищі",
   "setGenStorageLogout": "Вийти",
-  "setGenShowAdvanced": "Показати додаткові налаштування (ці установки можуть бути небезпечні)",
+  "setGenShowAdvanced": "Показати розширені налаштування",
   "setGenDevTools": "Засоби розробки",
   "setGenTryBeta": "Використовувати бета-версію до перезавантаження",
   "setGenTryBetaWarning": "Незбережені файли",
@@ -457,6 +457,7 @@
   "setGenAuditPasswordEntropy": "Перевіряти довжину і випадковість пароля",
   "setGenExcludePinsFromAudit": "Ніколи не перевіряти числові PIN-коди, наприклад, 123456",
   "setGenCheckPasswordsOnHIBP": "Перевіряти паролі з використанням мережевого сервісу {}",
+  "setGenHelpHIBP": "KeeWeb може перевіряти за допомогою мережевого сервісу, чи не розкривалися ваші паролі разом з минулими витоками даних. Під час цієї перевірки ваші паролі неможливо виявити чи отримати до них доступ, однак кількість паролів, що перевіряється таким чином, може бути доступна. Ви можете ознайомитися докладніше про цей сервіс та про вашу приватність {}. Увімкнувши цю опцію, KeeWeb автоматично перевірятиме ваші паролі.",
   "setGenHelpHIBPLink": "тут",
   "setGenAuditPasswordAge": "Застарілі паролі",
   "setGenAuditPasswordAgeOff": "Не показувати застереження про застарілі паролі",
@@ -470,11 +471,11 @@
   "setFileSave": "Зберегти",
   "setFileSaveTo": "Зберегти до ...",
   "setFileClose": "Закрити",
-  "setFileSync": "Синхр-я",
+  "setFileSync": "Синхронізація",
   "setFileSyncVerb": "Синхронізація",
   "setFileSaveToXml": "XML",
   "setFileSaveToHtml": "HTML",
-  "setFileLastSync": "Остання синх-я",
+  "setFileLastSync": "Остання синхронізація",
   "setFileLastSyncUnknown": "невідомо",
   "setFileSyncInProgress": "йде синхронізація",
   "setFileSyncError": "помилка синхр-ї",
@@ -486,7 +487,7 @@
   "setFileKeyFile": "Ключовий файл",
   "setFileSelKeyFile": "Оберіть ключовий файл",
   "setFileNames": "Назва",
-  "setFileDefUser": "Ім'я користувача за замовчуванням:",
+  "setFileDefUser": "Типове ім'я користувача",
   "setFileEnableTrash": "Увімкнути смітник",
   "setFileHistMode": "Історія запису",
   "setFileHistLimited": "Автоматично видаляти старі записи історії",
@@ -539,6 +540,8 @@
   "setFileDontUseYubiKey": "Не використовувати YubiKey",
   "setFileRefreshYubiKeyList": "Оновити список",
   "setFileYubiKeyHeader": "YubiKey",
+  "setFileYubiKeyBody": "Використання YubiKey на додачу до вашого головного пароля може бути небезпечним і може призвести до втрати доступу до ваших паролів у випадку збою. Ви зберегли резервну копію свого файлу перед зміною цього налаштування?",
+  "setFileYubiKeyErrorEmptyMac": "Схоже, у вас під'єднаний YubiKey, але він невидимий. Щоб отримати доступ до YubiKey, необхідно додати KeeWeb до розділу спостереження введення в налаштуваннях безпеки.",
   "setShTitle": "Гарячі клавіші",
   "setShShowAll": "показати усі елементи",
   "setShColors": "показати елементи цього кольору",
@@ -607,6 +610,13 @@
   "setDevicesYubiKeyOtpTitle": "Одноразові паролі",
   "setDevicesYubiKeyOtpDesc": "YubiKey можна використовувати для генерування одноразових кодів для різних сервісів.",
   "setDevicesYubiKeyOtpShowIcon": "Показувати піктограму на головному екрані",
+  "setDevicesYubiKeyOtpAutoOpen": "Автоматично завантажувати одноразові коди, коли є відкриті файли",
+  "setDevicesYubiKeyOtpMatchEntries": "Показувати відповідні одноразові коди в записах",
+  "setDevicesYubiKeyChalRespTitle": "Виклик-Відповідь",
+  "setDevicesYubiKeyChalRespDesc": "Також можна використовувати YubiKey в режимі виклик-відповідь, щоб частина приватного ключа використовувалась для шифрування файлів, що знаходяться на YubiKey.",
+  "setDevicesYubiKeyChalRespShow": "Показувати опцію використання YubiKey при відкритті файлів",
+  "setDevicesYubiKeyStuckWorkaround": "Повторне з'єднання з YubiKey при затримці під час завантаження",
+  "setDevicesYubiKeyRememberChalResp": "Пам'ятати виклик-відповідь доки програма відкрита",
   "setAboutTitle": "Про KeeWeb",
   "setAboutBuilt": "Ця програма створена за допомогою цих дивовижних інструментів",
   "setAboutLic": "Ліцензія",
@@ -633,18 +643,20 @@
   "dropboxAppKeyHint": "Ваш ключ програми",
   "dropboxAppSecret": "Пароль програми Dropbox",
   "dropboxAppSecretDesc": "Пароль можна знайти навпроти ключа програми",
-  "dropboxFolder": "Папка програми",
-  "dropboxFolderDesc": "Якщо ваш додаток пов'язано з усім сховищем Dropbox (а не окремою папкою), введіть тут назву папки з файлами kdbx",
-  "dropboxFolderSettingsDesc": "Оберіть будь-яку папку в Dropbox, де будуть зберігатися файли (кореневу папку за замовчуванням)",
-  "dropboxFolderPlaceholder": "папка за замовчуванням",
+  "dropboxFolder": "Тека програми",
+  "dropboxFolderDesc": "Якщо ваша програма пов'язана з усім сховищем Dropbox (а не окремою текою), вкажіть тут теку з файлами kdbx",
+  "dropboxFolderSettingsDesc": "Виберіть будь-яку теку в Dropbox, де зберігатимуться файли (типово коренева тека)",
+  "dropboxFolderPlaceholder": "типова тека",
   "dropboxLink": "Посилання на програму",
-  "dropboxLinkApp": "Папка програми (Apps/KeeWeb)",
-  "dropboxLinkFull": "Повністю Dropbox або будь-яка папка",
+  "dropboxLinkApp": "Тека програми (Apps/KeeWeb)",
+  "dropboxLinkFull": "Увесь Dropbox чи будь-яка тека",
   "dropboxLinkCustom": "Свій Dropbox-додаток",
   "gdriveSharedWithMe": "Розшарено зі мною",
   "webdavSaveMethod": "Метод збереження",
   "webdavSaveMove": "Завантажити тимчасовий файл і перемістити",
   "webdavSavePut": "Перезаписати файл kdbx за допомогою PUT",
+  "webdavNoLastModified": "Останній змінений HTTP-заголовок відсутній",
+  "webdavStatReload": "Завжди перезавантажувати файл замість дотримання відповідності останнього зміненого HTTP-заголовка",
   "launcherSave": "Збереження пароля бази даних",
   "launcherFileFilter": "KeePass файли",
   "authPopupRequired": "Спливаючі вікна заблоковані",
@@ -658,5 +670,15 @@
   "importCsvRun": "Імпортувати",
   "importIgnoreField": "Ігнорувати",
   "importTo": "Записи буде імпортовано в",
-  "importNewFile": "Новий файл"
+  "importNewFile": "Новий файл",
+  "yubiKeyStuckError": "Схоже, YubiKey не відповідає. Ви можете увімкнути автоматичне виправлення проблем в налаштуваннях програми.",
+  "yubiKeyNoKeyHeader": "Необхідний YubiKey",
+  "yubiKeyNoKeyBody": "Будь ласка, під'єднайте YubiKey з серійним номером {}",
+  "yubiKeySlot": "роз'єм",
+  "yubiKeyTouchRequestedHeader": "Торкніться до YubiKey",
+  "yubiKeyTouchRequestedBody": "Торкніться до YubiKey з серійним номером {}",
+  "yubiKeyDisabledErrorHeader": "USB вимкнено",
+  "yubiKeyDisabledErrorBody": "Для відкриття цього файлу необхідний YubiKey. Увімкніть пристрої USB в налаштуваннях.",
+  "yubiKeyErrorWithCode": "Помилка YubiKey, код {}.",
+  "bioOpenAuthPrompt": "відкрити \"{}\""
 }
