--- a/docs/translations/es-ES/es-ES.json
+++ b/docs/translations/es-ES/es-ES.json
@@ -56,6 +56,22 @@
   "menuItemCollapsed": "Doble clic para expandir",
   "menuRestoreApp": "Abrir {}",
   "menuQuitApp": "Quitar {}",
+  "sysMenuAboutKeeWeb": "Acerca de {}",
+  "sysMenuServices": "Servicios",
+  "sysMenuHide": "Ocultar {}",
+  "sysMenuHideOthers": "Ocultar otros",
+  "sysMenuUnhide": "Mostrar todo",
+  "sysMenuQuit": "Quitar {}",
+  "sysMenuEdit": "Editar",
+  "sysMenuUndo": "Deshacer",
+  "sysMenuRedo": "Rehacer",
+  "sysMenuCut": "Cortar",
+  "sysMenuCopy": "Copiar",
+  "sysMenuPaste": "Pegar",
+  "sysMenuSelectAll": "Seleccionar todo",
+  "sysMenuWindow": "Ventana",
+  "sysMenuMinimize": "Minimizar",
+  "sysMenuClose": "Cerrar ventana",
   "alertYes": "Sí",
   "alertNo": "No",
   "alertOk": "Aceptar",
@@ -193,6 +209,7 @@
   "openConfigErrorNotFound": "Archivo no encontrado",
   "openError": "Error",
   "openErrorDescription": "Ha ocurrido un error al abrir el archivo",
+  "openErrorDescriptionMaybeTouchIdChanged": "Este error se parece a lo que suele suceder cuando se cambia la configuración de Touch ID, por ejemplo, cuando has añadido o quitado una huella dactilar adicional. Si este fuera el caso, ve a Opciones, desactiva Touch ID y vuelve a activarlo.",
   "openErrorFileNotFound": "Archivo no encontrado",
   "openListErrorBody": "Se ha producido un error al cargar la lista de archivos",
   "openShowAllFiles": "Mostrar todos los archivos",
@@ -437,6 +454,7 @@
   "setGenLockOrSleep": "Cuando el ordenador esté bloqueado o suspendido",
   "setGenStorage": "Almacenamiento",
   "setGenDisableOfflineStorage": "No cachear los ficheros cargados en el almacenamiento offline",
+  "setGenShortLivedStorageToken": "Usar sesiones de duración limitada en proveedores de almacenamiento en la nube",
   "setGenStorageLogout": "Cerrar sesión",
   "setGenShowAdvanced": "Mostrar ajustes avanzados",
   "setGenDevTools": "Mostrar herramientas de desarrollador",
@@ -446,7 +464,6 @@
   "setGenShowAppLogs": "Mostrar registros de la aplicación",
   "setGenReloadApp": "Recargar la aplicación",
   "setGenFieldLabelDblClickAutoType": "Autocompletar al hacer doble clic sobre las etiquetas de los campos",
-  "setGenUseLegacyAutoType": "Usar autocompletado heredado (si tienes problemas)",
   "setGenTouchId": "Touch ID",
   "setGenTouchIdDisabled": "No usar Touch ID",
   "setGenTouchIdMemory": "Desbloquear con Touch ID mientras KeeWeb está en ejecución",
