--- a/docs/translations/fr-FR/fr-FR.json
+++ b/docs/translations/fr-FR/fr-FR.json
@@ -51,11 +51,27 @@
   "menuAlertNoTags": "Aucun tag",
   "menuAlertNoTagsBody": "Vous pouvez ajouter de nouveaux tags en éditant les champs, dans la section Tags.",
   "menuEmptyTrash": "Vider la Corbeille",
-  "menuEmptyTrashAlert": "Vider la Corbeille?",
+  "menuEmptyTrashAlert": "Vider la Corbeille ?",
   "menuEmptyTrashAlertBody": "Vous ne pourrez plus récupérer ces éléments",
   "menuItemCollapsed": "Double-cliquez pour déplier",
   "menuRestoreApp": "Ouvrir {}",
   "menuQuitApp": "Quitter {}",
+  "sysMenuAboutKeeWeb": "A propos {}",
+  "sysMenuServices": "Services",
+  "sysMenuHide": "Cacher {}",
+  "sysMenuHideOthers": "Cacher autres",
+  "sysMenuUnhide": "Montrer tous",
+  "sysMenuQuit": "Quitter {}",
+  "sysMenuEdit": "Editer",
+  "sysMenuUndo": "Annuler",
+  "sysMenuRedo": "Répéter",
+  "sysMenuCut": "Couper",
+  "sysMenuCopy": "Copier",
+  "sysMenuPaste": "Coller",
+  "sysMenuSelectAll": "Tout sélectionner",
+  "sysMenuWindow": "Fenêtre",
+  "sysMenuMinimize": "Réduire",
+  "sysMenuClose": "Fermer fenêtre",
   "alertYes": "Oui",
   "alertNo": "Non",
   "alertOk": "OK",
@@ -72,7 +88,7 @@
   "genLen": "Longueur",
   "genNewPass": "Nouveau mot de passe",
   "genPresetDefault": "réglages par défaut",
-  "genPresetDerived": "identique à l'ancien mot de passe",
+  "genPresetDerived": "similaire à l'ancien mot de passe",
   "genPresetPronounceable": "prononçable",
   "genPresetMed": "longueur moyenne",
   "genPresetLong": "long",
@@ -96,7 +112,7 @@
   "tagExists": "Ce tag existe déjà",
   "tagExistsBody": "Un tag existe déjà avec ce nom. Merci de choisir un autre nom.",
   "tagBadName": "Nom invalide",
-  "tagBadNameBody": "Tag name cannot contain characters {}. Please remove them.",
+  "tagBadNameBody": "Les noms de Tag ne peuvent contenir les caractères {}. Veuillez les supprimer.",
   "genPsTitle": "Préréglages du Générateur",
   "genPsCreate": "Nouveau préréglage",
   "genPsDelete": "Supprimer préréglage",
@@ -193,6 +209,7 @@
   "openConfigErrorNotFound": "Aucun fichier trouvé",
   "openError": "Erreur",
   "openErrorDescription": "Une erreur est survenue à l'ouverture du fichier",
+  "openErrorDescriptionMaybeTouchIdChanged": "L'erreur ressemble à ce qu'y arrive habituellement quand la configuration de Touch ID a été changée. Par exemple, vous avez ajouté ou supprimé un doigt supplémentaire. Si c'est le cas, allez dans Paramètres, désactiver Touch ID et activer le de nouveau.",
   "openErrorFileNotFound": "Fichier non trouvé",
   "openListErrorBody": "Erreur au chargement de la liste des fichiers",
   "openShowAllFiles": "Tous les fichiers",
@@ -246,7 +263,7 @@
   "detDelToTrashBody": "L'entrée sera déplacée dans la corbeille.",
   "detFieldCopied": "Copié",
   "detFieldCopiedTime": "Copié pendant {} secondes",
-  "detCopyHint": "You can copy field value by clicking its title",
+  "detCopyHint": "Vous pouvez copier la valeur du champ en cliquant sur ton titre",
   "detMore": "plus",
   "detClickToAddField": "cliquez pour ajouter un nouveau champ",
   "detMenuAddNewField": "Ajouter nouveau champ",
@@ -301,13 +318,18 @@
   "detIssuePwnedPassword": "Ce mot de passe a été exposé à une faille selon {}, il est recommandé de le changer",
   "detIssuePasswordCheckError": "Une erreur est survenue en vérifiant la force du mot de passe en ligne",
   "detIssueOldPassword": "Ce mot de passe est vieux",
+  "detIssueCloseAlertHeader": "Cacher les problèmes de mots de passe",
+  "detIssueCloseAlertBody": "Il y a plusieurs façon de cacher ce message :",
+  "detIssueCloseAlertEntry": "Ne plus montrer pour cette entrée",
+  "detIssueCloseAlertSettings": "Modifier les paramètres globaux",
   "autoTypeEntryFields": "Champs",
   "autoTypeModifiers": "Touches modificatrices",
   "autoTypeKeys": "Clés",
   "autoTypeLink": "plus...",
   "autoTypeError": "Erreur saisie auto",
   "autoTypeErrorGeneric": "Il y a eu une erreur lors de la saisie automatique : {}",
-  "autoTypeErrorGlobal": "Pour utiliser un raccourci, sélectionner l'application là où vous voulez saisir le mot de passe",
+  "autoTypeErrorAccessibilityMacOS": "Nous avons essayé d'envoyer les frappes de caractères à cette application mais cela ne semble pas fonctionner parce qu'il manque des permissions. Cliquer ici pour en lire plus.",
+  "autoTypeErrorGlobal": "Pour utiliser un raccourci global, sélectionner l'application là où vous voulez saisir le mot de passe",
   "autoTypeErrorNotInstalled": "{} n'est pas installé",
   "autoTypeHeader": "Saisie auto : Selectionner",
   "autoTypeMsgNoWindow": "Nous n'avons pas pu obtenir le titre de la fenêtre active, commencez à taper pour rechercher",
@@ -424,12 +446,15 @@
   "setGenClearSeconds": "Dans {} secondes",
   "setGenClearMinute": "Dans une minute",
   "setGenMinInstead": "Réduire l'application au lieu de fermer",
+  "setGenMinOnFieldCopy": "Réduire sur copie d'un champ",
   "setGenLock": "Verrou Auto",
   "setGenLockMinimize": "quand l'appli est en arrière-plan",
   "setGenLockCopy": "sur copie de m.d.p.",
   "setGenLockAutoType": "sur saisie auto",
   "setGenLockOrSleep": "Quand l'ordinateur est verrouillé ou mis en sommeil",
   "setGenStorage": "Stockage",
+  "setGenDisableOfflineStorage": "Ne pas mettre en cache des fichiers d'un stockage offline",
+  "setGenShortLivedStorageToken": "Utiliser des sessions de courte-durée avec les fournisseurs de stockage dans le cloud",
   "setGenStorageLogout": "Déconnexion",
   "setGenShowAdvanced": "Afficher les paramètres avancés",
   "setGenDevTools": "Afficher les outils de développement",
@@ -441,7 +466,7 @@
   "setGenFieldLabelDblClickAutoType": "Remplissage auto par double clic sur les noms de champ",
   "setGenTouchId": "Touch ID",
   "setGenTouchIdDisabled": "Ne pas utiliser Touch ID",
-  "setGenTouchIdMemory": "Dévérouiller avec Touch ID uniquement quand Keeweb est lancé",
+  "setGenTouchIdMemory": "Dévérouiller avec Touch ID uniquement quand KeeWeb est lancé",
   "setGenTouchIdFile": "Toujours utiliser Touch ID à la place du mot de passe",
   "setGenTouchIdPass": "Exige le mot de passe après",
   "setGenAudit": "Audit",
