--- a/docs/translations/hu/hu.json
+++ b/docs/translations/hu/hu.json
@@ -56,6 +56,22 @@
   "menuItemCollapsed": "Kattintson kétszer a kinyitáshoz",
   "menuRestoreApp": "{} indítása",
   "menuQuitApp": "{} bezárása",
+  "sysMenuAboutKeeWeb": "A {}-ről",
+  "sysMenuServices": "Szolgáltatások",
+  "sysMenuHide": "{} elrejtése",
+  "sysMenuHideOthers": "A többi elrejtése",
+  "sysMenuUnhide": "Az összes megjelenítése",
+  "sysMenuQuit": "Kilépés a {}-ről",
+  "sysMenuEdit": "Szerkesztés",
+  "sysMenuUndo": "Visszavonás",
+  "sysMenuRedo": "Ismét",
+  "sysMenuCut": "Kivágás",
+  "sysMenuCopy": "Másolás",
+  "sysMenuPaste": "Beillesztés",
+  "sysMenuSelectAll": "Az összes kiválasztása",
+  "sysMenuWindow": "Ablak",
+  "sysMenuMinimize": "Minimalizálás",
+  "sysMenuClose": "Ablak bezárása",
   "alertYes": "Igen",
   "alertNo": "Nem",
   "alertOk": "OK",
@@ -193,6 +209,7 @@
   "openConfigErrorNotFound": "Fájl nem található",
   "openError": "Hiba",
   "openErrorDescription": "Hiba történt a fájl megnyitása során",
+  "openErrorDescriptionMaybeTouchIdChanged": "A hiba hasonlónak tűnik ahhoz, – ami általában akkor szokott történni, amikor a Touch ID beállításokat megváltoztatják. Például ha ön rögzített, vagy eltávolított egy hozzáadott ujjmintát. Ha ez a helyzet, akkor a beállításokban, tiltsa le és újra engedélyezze a Touch ID-t.",
   "openErrorFileNotFound": "Fájl nem található",
   "openListErrorBody": "Hiba történt a fájl lista betöltése során",
   "openShowAllFiles": "Minden fájl megjelenítése",
@@ -311,6 +328,7 @@
   "autoTypeLink": "továbbiak...",
   "autoTypeError": "Automatikus gépelés hiba",
   "autoTypeErrorGeneric": "Hiba történt az automatikus gépelés során: {}",
+  "autoTypeErrorAccessibilityMacOS": "Megpróbáltunk billentyűleütéseket küldeni az alkalmazásnak, de úgy tűnik, hogy nem működik. Ez lehet, hogy hiányzó engedélyek miatt történik. Kattintson ide, hogy többet tudjon meg erről:",
   "autoTypeErrorGlobal": "Egy rendszerszintű parancsikon használatához fókuszálja az alkalmazást oda, ahova a jelszót be kívánja gépelni",
   "autoTypeErrorNotInstalled": "{} nincs telepítve",
   "autoTypeHeader": "Automatikus gépelés: Kiválasztás",
@@ -436,6 +454,7 @@
   "setGenLockOrSleep": "Amikor a számítógép zárolt, vagy alvó állapotban van",
   "setGenStorage": "Tároló",
   "setGenDisableOfflineStorage": "Ne gyorsítótárazza a fájlokat az  offline tárolóra",
+  "setGenShortLivedStorageToken": "Használjon rövid-életű munkameneteket a felhő-tárhely szolgáltatókkal",
   "setGenStorageLogout": "Kijelentkezés",
   "setGenShowAdvanced": "Haladó beállítások megjelenítése",
   "setGenDevTools": "Fejlesztőeszközök megjelenítése",
@@ -445,13 +464,22 @@
   "setGenShowAppLogs": "Alkalmazás napló megjelenítése",
   "setGenReloadApp": "Az alkalmazás újratöltése",
   "setGenFieldLabelDblClickAutoType": "Automatikus gépelés, mező feliratok dupla-kattintására",
-  "setGenUseLegacyAutoType": "Régi automatikus gépelés (ha problémák adódnak)",
+  "setGenTouchId": "Touch ID",
+  "setGenTouchIdDisabled": "Ne használjon Touch ID-t",
+  "setGenTouchIdMemory": "Feloldás Touch ID-vel, csak amikor a KeeWeb éppen fut",
+  "setGenTouchIdFile": "Mindig használjon Touch ID-t a mesterjelszó helyett",
+  "setGenTouchIdPass": "A mesterjelszó megkövetelése adott idő után",
   "setGenAudit": "Ellenőrzés",
   "setGenAuditPasswords": "Jelszó erősségével kapcsolatos figyelmeztetések",
   "setGenAuditPasswordEntropy": "Jelszó hossz és véletlenszerűség ellenőrzése",
   "setGenExcludePinsFromAudit": "Soha ne ellenőrizze a rövid numerikus PIN kódokat (pl. 123456)",
+  "setGenCheckPasswordsOnHIBP": "Jelszavak ellenőrzése egy online szolgáltatással {}",
+  "setGenHelpHIBP": "A KeeWeb egy online szolgáltatás segítségével ellenőrizni tudja, hogy a jelszavai korábban érintettek voltak -e, egy-egy adatvédelmi incidens során. A jelszava nem kinyerhető az online adatküldés során, azonban a jelszavainak száma, amelyek ilyen módon kerülnek ellenőrzésre felfedhető. Többet a személyes adatbiztonságáról, amikor használja ezt a szolgáltatást, itt talál – {}. Ha ez az opció engedélyezve van, a KeeWeb automatikusan ellenőrzi fogja a jelszavait az imént említett módon.",
   "setGenHelpHIBPLink": "itt",
   "setGenAuditPasswordAge": "Régi jelszavak",
+  "setGenAuditPasswordAgeOff": "Ne mutasson figyelmeztetéseket régi jelszavakkal kapcsolatban",
+  "setGenAuditPasswordAgeOneYear": "Mutasson figyelmeztetéseket az egy évnél régebbi jelszavak esetében",
+  "setGenAuditPasswordAgeYears": "Mutasson figyelmeztetéseket a(z) {} évnél régebbi jelszavak esetében",
   "setFilePath": "Fájl elérési út",
   "setFileStorage": "Ez a fájl betöltve innen: {}",
   "setFileIntl": "A fájl a belső alkalmazástárolóban van tárolva.",
@@ -668,5 +696,6 @@
   "yubiKeyTouchRequestedBody": "Kérem érintse meg a {} szériaszámú YubiKey-t",
   "yubiKeyDisabledErrorHeader": "Az USB nincs engedélyezve",
   "yubiKeyDisabledErrorBody": "YubiKey szükséges a fájl megnyitásához, kérlek engedélyezd az USB eszközöket a beállításokban.",
-  "yubiKeyErrorWithCode": "YubiKey hiba, kód {}."
+  "yubiKeyErrorWithCode": "YubiKey hiba, kód {}.",
+  "bioOpenAuthPrompt": "megnyitni \"{}\""
 }
