--- a/docs/translations/it-IT/it-IT.json
+++ b/docs/translations/it-IT/it-IT.json
@@ -56,6 +56,22 @@
   "menuItemCollapsed": "Fai doppio-click per espandere",
   "menuRestoreApp": "Apri {}",
   "menuQuitApp": "Chiudi {}",
+  "sysMenuAboutKeeWeb": "Circa {}",
+  "sysMenuServices": "Servizi",
+  "sysMenuHide": "Nascondi {}",
+  "sysMenuHideOthers": "Nascondi gli altri",
+  "sysMenuUnhide": "Mostra tutti",
+  "sysMenuQuit": "Chiudi {}",
+  "sysMenuEdit": "Modifica",
+  "sysMenuUndo": "Annulla",
+  "sysMenuRedo": "RIpeti",
+  "sysMenuCut": "Taglia",
+  "sysMenuCopy": "Copia",
+  "sysMenuPaste": "Incolla",
+  "sysMenuSelectAll": "Seleziona tutto",
+  "sysMenuWindow": "Finestra",
+  "sysMenuMinimize": "Riduci",
+  "sysMenuClose": "Chiudi finestra",
   "alertYes": "Sì",
   "alertNo": "No",
   "alertOk": "OK",
@@ -63,7 +79,7 @@
   "alertSignIn": "Login",
   "alertCopy": "Copia",
   "alertClose": "Chiudi",
-  "alertDoNotAsk": "Non chiedere più",
+  "alertDoNotAsk": "Non chiedermelo più",
   "appBeta": "ATTENZIONE: versione beta, solo per anteprima",
   "footerOpen": "Apri / Nuovo",
   "footerSyncError": "Errore sincronizzazione",
@@ -197,6 +213,7 @@
   "openListErrorBody": "Errore durante il caricamento della lista dei file",
   "openShowAllFiles": "Mostra tutti i file",
   "openFileNoCacheError": "File non trovato nella cache. Questo può accadere se la cache del Browser viene cancellata. Per aprire il file, rimuovilo da KeeWeb a aggiungilo nuovamente.",
+  "openChalRespHeader": "Challenge-Response",
   "openChalRespLoading": "Caricamento lista di YubiKeys",
   "openChalRespSelectYubiKey": "Seleziona una YubiKey che desideri utilizzare",
   "openChalRespErrorEmpty": "Nessuna YubiKeys trovata.",
@@ -294,9 +311,14 @@
   "detRevealField": "Mostra",
   "detHideField": "Nascondi",
   "detAutoTypeField": "Auto scrittura",
+  "detIssuesHideTooltip": "Nascondi questo warning",
   "detIssueWeakPassword": "La password é debole, si raccomanda di cambiarla.",
   "detIssuePoorPassword": "La password é molto debole, si raccomanda fortemente di cambiarla.",
   "detIssueOldPassword": "La password è vecchia.",
+  "detIssueCloseAlertHeader": "Nascondi i problemi della password",
+  "detIssueCloseAlertBody": "Ci sono diversi modi per nascondere questo warning:",
+  "detIssueCloseAlertEntry": "Non mostrare questa voce",
+  "detIssueCloseAlertSettings": "Modifica impostazioni generali",
   "autoTypeEntryFields": "Campi della voce",
   "autoTypeModifiers": "Modificatori",
   "autoTypeKeys": "Tasti",
@@ -367,8 +389,10 @@
   "setGenThemeDefault": "Predefinito",
   "setGenThemeDark": "Scuro",
   "setGenThemeLight": "Chiaro",
+  "setGenThemeBlue": "Blu piatto",
   "setGenThemeFb": "Blu",
   "setGenThemeBl": "Blu chiaro",
+  "setGenThemeBrown": "Brownie",
   "setGenThemeDb": "Marrone scuro",
   "setGenThemeLb": "Marrone chiaro",
   "setGenThemeTerminal": "Terminale",
@@ -436,6 +460,7 @@
   "setGenTouchIdMemory": "Sblocca con Touch ID solo quando KeeWeb è in esecuzione",
   "setGenTouchIdFile": "Usa sempre Touch ID invece della master password",
   "setGenTouchIdPass": "Richiedi la master password dopo",
+  "setGenAudit": "Pubblico",
   "setGenExcludePinsFromAudit": "Non controllare codici numerici corti (PIN), tipo 123456",
   "setGenCheckPasswordsOnHIBP": "Controlla la password usando un servizio online {}",
   "setGenHelpHIBPLink": "qui",
@@ -614,6 +639,8 @@
   "dropboxSetupDesc": "Sono richieste alcune configurazioni per usare Dropbox se l'applicazione è self-hosted. Per favore, crea la tua app Dropbox e riempi i campi qui sotto.",
   "dropboxAppKey": "Chiave della app Dropbox",
   "dropboxAppKeyDesc": "Copia la chiave dalla tua app Dropbox (Impostazioni per sviluppatori)",
+  "dropboxAppSecret": "Segreto dell'app Dropbox",
+  "dropboxAppSecretDesc": "Il Segreto puo essere trovato vicinino alla chiave dell'applicazione",
   "dropboxFolder": "Cartella della tua app",
   "dropboxFolderDesc": "Se la tua app è collegata all'intero Dropbox (invece che a una cartella dedicata all'app), imposta la cartella con i tuoi file kdbx",
   "dropboxFolderSettingsDesc": "Seleziona una qualsiasi cartella nel tuo Dropbox dove saranno salvati i file (di default la cartella principale)",
@@ -644,6 +671,7 @@
   "yubiKeyNoKeyHeader": "YubiKey richiesta",
   "yubiKeyNoKeyBody": "Inserisci la tua YubiKey con il numero di serie {}",
   "yubiKeySlot": "slot",
+  "yubiKeyTouchRequestedHeader": "Tocca la YubiKey",
   "yubiKeyTouchRequestedBody": "inserisci la tua YubiKey con il numero di serie {}",
   "yubiKeyDisabledErrorHeader": "La USB è disabilitata",
   "yubiKeyDisabledErrorBody": "La YubiKey è necessaria per aprire questo file, abilitare i dispositivi USB nelle impostazioni.",
