--- a/docs/translations/ja/ja.json
+++ b/docs/translations/ja/ja.json
@@ -56,6 +56,22 @@
   "menuItemCollapsed": "展開するにはダブルクリックしてください",
   "menuRestoreApp": "{} を開く",
   "menuQuitApp": "{}を閉じる",
+  "sysMenuAboutKeeWeb": "{}について",
+  "sysMenuServices": "サービス",
+  "sysMenuHide": "{}を隠す",
+  "sysMenuHideOthers": "その他を隠す",
+  "sysMenuUnhide": "すべて選択",
+  "sysMenuQuit": "{}を終了",
+  "sysMenuEdit": "編集",
+  "sysMenuUndo": "取消",
+  "sysMenuRedo": "やり直し",
+  "sysMenuCut": "切り取り",
+  "sysMenuCopy": "コピー",
+  "sysMenuPaste": "貼り付け",
+  "sysMenuSelectAll": "すべて選択",
+  "sysMenuWindow": "ウインドウ",
+  "sysMenuMinimize": "最小化",
+  "sysMenuClose": "ウインドウを閉じる",
   "alertYes": "はい",
   "alertNo": "いいえ",
   "alertOk": "了解",
@@ -193,6 +209,7 @@
   "openConfigErrorNotFound": "ファイルが見つかりませんでした",
   "openError": "エラー",
   "openErrorDescription": "ファイルを開くときにエラーが発生しました",
+  "openErrorDescriptionMaybeTouchIdChanged": "使用中にこの種のエラーが起きるのは、iOSのTouch IDの設定に変更を行った、例えば、指紋の追加や削除や変更を行ったときです。もしその場合は、KeeWebの設定にあるTouch IDを無効にしたあと、再度有効にしてください。",
   "openErrorFileNotFound": "ファイルが見つかりませんでした",
   "openListErrorBody": "ファイルリストの読み込み中にエラーが発生しました",
   "openShowAllFiles": "全ファイルを表示",
@@ -437,6 +454,7 @@
   "setGenLockOrSleep": "コンピュータがロックされたかスリープ状態に移行したとき",
   "setGenStorage": "ストレージ",
   "setGenDisableOfflineStorage": "オフラインストレージに読み込んだファイルをキャッシュしない",
+  "setGenShortLivedStorageToken": "クラウドストレージプロバイダでは短期セッションを利用",
   "setGenStorageLogout": "ログアウト",
   "setGenShowAdvanced": "高度な設定を表示する",
   "setGenDevTools": "デベロッパーツールを表示する",
@@ -446,7 +464,6 @@
   "setGenShowAppLogs": "アプリのログを表示する",
   "setGenReloadApp": "アプリを再読み込みする",
   "setGenFieldLabelDblClickAutoType": "フィールドの題名をダブルクリックで自動入力する",
-  "setGenUseLegacyAutoType": "（問題がある場合）以前の自動入力を使用",
   "setGenTouchId": "Touch ID",
   "setGenTouchIdDisabled": "Touch IDを使用しない",
   "setGenTouchIdMemory": "KeeWebが動作中はTouch IDのみで解除する",
