--- a/docs/translations/nl-NL/nl-NL.json
+++ b/docs/translations/nl-NL/nl-NL.json
@@ -56,6 +56,22 @@
   "menuItemCollapsed": "Dubbelklik om uit te klappen",
   "menuRestoreApp": "{} openen",
   "menuQuitApp": "{} afsluiten",
+  "sysMenuAboutKeeWeb": "Over {}",
+  "sysMenuServices": "Diensten",
+  "sysMenuHide": "{} verbergen",
+  "sysMenuHideOthers": "Overige verbergen",
+  "sysMenuUnhide": "Alles weergeven",
+  "sysMenuQuit": "{} afsluiten",
+  "sysMenuEdit": "Bewerken",
+  "sysMenuUndo": "Ongedaan maken",
+  "sysMenuRedo": "Opnieuw uitvoeren",
+  "sysMenuCut": "Knippen",
+  "sysMenuCopy": "Kopiëren",
+  "sysMenuPaste": "Plakken",
+  "sysMenuSelectAll": "Alles selecteren",
+  "sysMenuWindow": "Venster",
+  "sysMenuMinimize": "Minimaliseren",
+  "sysMenuClose": "Venster sluiten",
   "alertYes": "Ja",
   "alertNo": "Nee",
   "alertOk": "Oké",
@@ -193,6 +209,7 @@
   "openConfigErrorNotFound": "Bestand niet gevonden",
   "openError": "Fout",
   "openErrorDescription": "Er is een fout opgetreden bij het openen van dit bestand",
+  "openErrorDescriptionMaybeTouchIdChanged": "De fout lijkt op wat gewoonlijk gebeurt wanneer de Touch ID-instellingen zijn gewijzigd, wanneer bijvoorbeeld een extra vinger is toegevoegd of verwijderd. Als dit het geval is, ga naar Instellingen en schakel Touch ID uit en weer in.",
   "openErrorFileNotFound": "Bestand niet gevonden",
   "openListErrorBody": "Fout bij het laden van de bestandenlijst",
   "openShowAllFiles": "Alle bestanden weergeven",
@@ -315,13 +332,13 @@
   "autoTypeErrorGlobal": "Om de globale sneltoets te gebruiken, selecteer de app waar je je wachtwoord wilt typen",
   "autoTypeErrorNotInstalled": "{} is niet geïnstalleerd",
   "autoTypeHeader": "Auto-Type: Selectie",
-  "autoTypeMsgNoWindow": "We konden de titel van het actieve venster niet vinden, begin met typen om te zoeken",
+  "autoTypeMsgNoWindow": "De titel van het actieve venster kon niet worden gevonden, begin met typen om te zoeken",
   "autoTypeMsgMatchedByWindow": "Selecteer een wachtwoord voor {}",
   "autoTypeNoMatches": "niks gevonden",
   "autoTypeSelectionHint": "Voer de Auto-typereeks in",
   "autoTypeSelectionHintAction": "Voer alleen het wachtwoord in",
   "autoTypeSelectionHintOpt": "Voer alleen gebruikersnaam in",
-  "autoTypeSelectionHintShift": "Andere velden",
+  "autoTypeSelectionHintShift": "Overige velden",
   "autoTypeSelectionOtp": "Eenmalige code",
   "appSecWarn": "Onveilig!",
   "appSecWarnBody1": "Je hebt de app geladen met een onveilige verbinding. Iemand kan mogelijk nu meekijken en je wachtwoorden stelen. Wij adviseren je te stoppen tenzij je je bewust bent van de mogelijke consequenties.",
@@ -437,6 +454,7 @@
   "setGenLockOrSleep": "Als de computer wordt vergrendeld of in slaapstand gaat",
   "setGenStorage": "Opslag",
   "setGenDisableOfflineStorage": "Maak geen tijdelijke offline opslag van geladen bestanden",
+  "setGenShortLivedStorageToken": "Gebruik kortstondige sessies bij providers van cloudopslag",
   "setGenStorageLogout": "Uitloggen",
   "setGenShowAdvanced": "Geavanceerde instellingen weergeven",
   "setGenDevTools": "Ontwikkelaarstools weergeven",
@@ -446,7 +464,6 @@
   "setGenShowAppLogs": "App-logs weergeven",
   "setGenReloadApp": "App opnieuw laden",
   "setGenFieldLabelDblClickAutoType": "Automatisch invullen bij dubbelklikken van veldlabels",
-  "setGenUseLegacyAutoType": "Gebruik legacy auto-type (bij problemen)",
   "setGenTouchId": "Touch ID",
   "setGenTouchIdDisabled": "Geen Touch ID gebruiken",
   "setGenTouchIdMemory": "Alleen met Touch ID ontgrendelen als KeeWeb actief is",
@@ -456,8 +473,8 @@
   "setGenAuditPasswords": "Waarschuwingen over wachtwoordsterkte weergeven",
   "setGenAuditPasswordEntropy": "Wachtwoordlengte en willekeurigheid controleren",
   "setGenExcludePinsFromAudit": "Korte numerieke pincodes, zoals 123456, nooit controleren",
-  "setGenCheckPasswordsOnHIBP": "Controleer wachtwoorden met een online service {}",
-  "setGenHelpHIBP": "KeeWeb kan via een online service controleren of je wachtwoorden eerder zijn blootgesteld aan een datalek. Je wachtwoord kan niet worden herleid op basis van online verzonden gegevens, maar het aantal op deze manier gecontroleerde wachtwoorden is zichtbaar. Meer informatie over je privacy bij het gebruik van deze service is te vinden op {}. Als deze optie is ingeschakeld, zal KeeWeb daar automatisch je wachtwoorden controleren.",
+  "setGenCheckPasswordsOnHIBP": "Controleer wachtwoorden met een online dienst {}",
+  "setGenHelpHIBP": "KeeWeb kan via een online dienst controleren of je wachtwoorden eerder zijn blootgesteld aan een datalek. Je wachtwoord kan niet worden herleid op basis van online verzonden gegevens, maar het aantal op deze manier gecontroleerde wachtwoorden is zichtbaar. Meer informatie over je privacy bij het gebruik van deze service is te vinden op {}. Als deze optie is ingeschakeld, zal KeeWeb daar automatisch je wachtwoorden controleren.",
   "setGenHelpHIBPLink": "hier",
   "setGenAuditPasswordAge": "Oude wachtwoorden",
   "setGenAuditPasswordAgeOff": "Geen waarschuwingen weergeven over oude wachtwoorden",
@@ -609,7 +626,7 @@
   "setDevicesYubiKeyToolsStatusError": "{} is geïnstalleerd of niet functioneel",
   "setDevicesYubiKeyOtpTitle": "Eenmalige codes",
   "setDevicesYubiKeyOtpDesc": "YubiKey kan worden gebruikt om eenmalige codes voor verschillende diensten te genereren.",
-  "setDevicesYubiKeyOtpShowIcon": "Toon het pictogram op het startscherm",
+  "setDevicesYubiKeyOtpShowIcon": "Pictogram op het startscherm weergeven",
   "setDevicesYubiKeyOtpAutoOpen": "Automatisch eenmalige codes laden wanneer er geopende bestanden zijn",
   "setDevicesYubiKeyOtpMatchEntries": "Toon overeenkomende eenmalige codes in items",
   "setDevicesYubiKeyChalRespTitle": "Challenge-respons",
