--- a/docs/translations/pl/pl.json
+++ b/docs/translations/pl/pl.json
@@ -56,6 +56,22 @@
   "menuItemCollapsed": "Dwukrotnie kliknij, aby rozwinąć",
   "menuRestoreApp": "Otwórz {}",
   "menuQuitApp": "Zamknij {}",
+  "sysMenuAboutKeeWeb": "Informacje o {}",
+  "sysMenuServices": "Usługi",
+  "sysMenuHide": "Ukryj {}",
+  "sysMenuHideOthers": "Ukryj inne",
+  "sysMenuUnhide": "Pokaż wszystko",
+  "sysMenuQuit": "Zakończ {}",
+  "sysMenuEdit": "Edycja",
+  "sysMenuUndo": "Cofnij",
+  "sysMenuRedo": "Ponów",
+  "sysMenuCut": "Wytnij",
+  "sysMenuCopy": "Kopiuj",
+  "sysMenuPaste": "Wklej",
+  "sysMenuSelectAll": "Zaznacz wszystko",
+  "sysMenuWindow": "Okno",
+  "sysMenuMinimize": "Zminimalizuj",
+  "sysMenuClose": "Zamknij okno",
   "alertYes": "Tak",
   "alertNo": "Nie",
   "alertOk": "OK",
@@ -193,6 +209,7 @@
   "openConfigErrorNotFound": "Nie znaleziono pliku",
   "openError": "Błąd",
   "openErrorDescription": "Wystąpił błąd podczas otwierania pliku",
+  "openErrorDescriptionMaybeTouchIdChanged": "Błąd wygląda podobnie do tego, co zwykle dzieje się po zmianie konfiguracji Touch ID, na przykład po dodaniu lub usunięciu dodatkowego palca. W takim przypadku przejdź do Ustawień, wyłącz funkcję Touch ID i włącz ją ponownie.",
   "openErrorFileNotFound": "Nie znaleziono pliku",
   "openListErrorBody": "Wystąpił błąd podczas ładowania listy plików",
   "openShowAllFiles": "Pokaż wszystkie pliki",
@@ -437,6 +454,7 @@
   "setGenLockOrSleep": "Gdy komputer jest zablokowany lub uśpiony",
   "setGenStorage": "Przechowywanie",
   "setGenDisableOfflineStorage": "Nie buforuj załadowanych plików w pamięci offline",
+  "setGenShortLivedStorageToken": "Używaj krótkotrwałych sesji u dostawców pamięci masowej w chmurze",
   "setGenStorageLogout": "Wyloguj",
   "setGenShowAdvanced": "Pokaż zaawansowane ustawienia (mogą być niebezpieczne)",
   "setGenDevTools": "Pokaż narzędzia twórcy",
@@ -446,7 +464,6 @@
   "setGenShowAppLogs": "Pokaż logi aplikacji",
   "setGenReloadApp": "Załaduj ponownie aplikację",
   "setGenFieldLabelDblClickAutoType": "Autowpisywanie po dwukrotnym kliknięciu etykiet pól",
-  "setGenUseLegacyAutoType": "Używaj starszego automatycznego wpisywania (jeśli masz problemy)",
   "setGenTouchId": "Touch ID",
   "setGenTouchIdDisabled": "Nie używaj Touch ID",
   "setGenTouchIdMemory": "Odblokuj za pomocą Touch ID tylko wtedy, gdy działa KeeWeb",
